[added] 'Stop' paragraph

--- a/app/templates/components/jquery-pic.hbs
+++ b/app/templates/components/jquery-pic.hbs
@@ -10,4 +10,7 @@
     <img src="http://lorempixel.com/640/480/nature/4" alt="" class="thumbnail">
     <img src="http://lorempixel.com/640/480/nature/5" alt="" class="thumbnail">
   </div>
+  <p {{action "stopEvents"}}>
+    Stop Events
+  </p>
 </div>
